# openauto

./: .gitignore  CMakeLists.txt  Readme.md
assets/: resources.qrc
autoapp/: CMakeLists.txt  autoapp.cpp
autoapp/UI/: ConnectDialog.cpp  MainWindow.cpp  SettingsWindow.cpp  mainwindow.ui
autoapp/assets/: aa_video.qml
btservice/: AndroidBluetoothServer.cpp  AndroidBluetoothService.cpp  CMakeLists.txt  btservice.cpp
btservice_proto/: CMakeLists.txt  NetworkInfo.proto  PhoneResponse.proto  SocketInfo.proto  SocketInfoRequest.proto  SocketInfoResponse.proto
cmake_modules/: Findaasdk.cmake  Findh264.cmake  Findlibomx.cmake  Findlibusb-1.0.cmake
include/: OpenautoLog.hpp
include/autoapp/UI/: ConnectDialog.hpp  MainWindow.hpp  SettingsWindow.hpp
include/btservice/: AndroidBluetoothServer.hpp  AndroidBluetoothService.hpp  IAndroidBluetoothServer.hpp  IAndroidBluetoothService.hpp  btservice.hpp
include/f1x/openauto/autoapp/Projection/: GSTVideoOutput.hpp  InputDevice.hpp  OMXVideoOutput.hpp  QtVideoOutput.hpp
include/f1x/openauto/autoapp/Service/: SensorService.hpp  ServiceFactory.hpp
include/openauto/: App.hpp
include/openauto/Configuration/: AudioOutputBackendType.hpp  BluetootAdapterType.hpp  Configuration.hpp  HandednessOfTrafficType.hpp  IConfiguration.hpp  IRecentAddressesList.hpp  RecentAddressesList.hpp
include/openauto/Projection/: DummyBluetoothDevice.hpp  GSTVideoOutput.hpp  IAudioInput.hpp  IAudioOutput.hpp  IBluetoothDevice.hpp  IInputDevice.hpp  IInputDeviceEventHandler.hpp  IVideoOutput.hpp  InputDevice.hpp  InputEvent.hpp  LocalBluetoothDevice.hpp  OMXVideoOutput.hpp  QtAudioInput.hpp  QtAudioOutput.hpp  QtVideoOutput.hpp  RemoteBluetoothDevice.hpp  RtAudioOutput.hpp  SequentialBuffer.hpp  VideoOutput.hpp
include/openauto/Service/: AndroidAutoEntity.hpp  AndroidAutoEntityFactory.hpp  AudioInputService.hpp  AudioService.hpp  BluetoothService.hpp  IAndroidAutoEntity.hpp  IAndroidAutoEntityEventHandler.hpp  IAndroidAutoEntityFactory.hpp  IAndroidAutoInterface.hpp  IPinger.hpp  IService.hpp  IServiceFactory.hpp  InputService.hpp  MediaAudioService.hpp  MediaStatusService.hpp  NavigationStatusService.hpp  Pinger.hpp  SensorService.hpp  ServiceFactory.hpp  SpeechAudioService.hpp  SystemAudioService.hpp  VideoService.hpp
openauto/: App.cpp  CMakeLists.txt
openauto/Configuration/: Configuration.cpp  RecentAddressesList.cpp
openauto/Projection/: DummyBluetoothDevice.cpp  GSTVideoOutput.cpp  InputDevice.cpp  LocalBluetoothDevice.cpp  OMXVideoOutput.cpp  QtAudioInput.cpp  QtAudioOutput.cpp  QtVideoOutput.cpp  RemoteBluetoothDevice.cpp  RtAudioOutput.cpp  SequentialBuffer.cpp  VideoOutput.cpp
openauto/Service/: AndroidAutoEntity.cpp  AndroidAutoEntityFactory.cpp  AudioInputService.cpp  AudioService.cpp  BluetoothService.cpp  InputService.cpp  MediaAudioService.cpp  MediaStatusService.cpp  NavigationStatusService.cpp  Pinger.cpp  SensorService.cpp  ServiceFactory.cpp  SpeechAudioService.cpp  SystemAudioService.cpp  VideoService.cpp
src/autoapp/Projection/: GSTVideoOutput.cpp  InputDevice.cpp  OMXVideoOutput.cpp  QtVideoOutput.cpp
src/autoapp/Service/: SensorService.cpp  ServiceFactory.cpp
